--- a/AZ-204/lp01.md
+++ b/AZ-204/lp01.md
@@ -32,17 +32,16 @@
 
 ラボ1を起動
 
-■Gitリポジトリをローカルにクローン
+■ラボのファイルをダウンロード
 
-https://github.com/MicrosoftLearning/AZ-204-DevelopingSolutionsforMicrosoftAzure.git
-
+- F:ドライブにダウンロードされる。
 
 ■ストレージアカウント
 
 - ※Azure portalから操作
 - ストレージアカウントを作成
 - images コンテナーを作成
-  - パブリックアクセス Blob
+  - パブリックアクセス: Blob
 - 画像をアップロード
   - Allfiles\Labs\01\Starter\Images 以下のファイル
 - 接続文字列を取得
@@ -50,26 +49,26 @@ https://github.com/MicrosoftLearning/AZ-204-DevelopingSolutionsforMicrosoftAzure
 ■WebAPI
 
 - App Service アプリを作成
-  - webapi で始まる名前を指定
+  - **webapi** で始まる名前を指定
 - アプリケーション設定を追加
-  - StorageConnectionString: 接続文字列
-- Webアプリ「API」をデプロイ
-  - Visual Studio Codeを使用して以下を開く
-    - Allfiles\Labs\01\Starter\API
+  - StorageConnectionString: コピーしておいた接続文字列
+- Visual Studio Codeを起動
+  - Azure App Service拡張機能をインストール
+  - Allfiles\Labs\01\Starter\API を開く
+  - App Service Webアプリ「**webapi～～**」へデプロイ
 - Webブラウザーで動作を確認
 - WebアプリのURLをコピーしておく
 
 ■WebApp
 
 - App Service アプリを作成
-  - webapi12341234
+  - **webapp** で始まる名前を指定
 - アプリケーション設定を追加
-  - ApiUrl: 先程コピーしたWebアプリのURL
-- Webアプリ「Web」をデプロイ
-  - Visual Studio Codeを使用して以下を開く
-    - Allfiles\Labs\01\Starter\Web
+  - ApiUrl: 先程コピーしたWeb APIのURL
+- Visual Studio Code
+  - Allfiles\Labs\01\Starter\Web
+  - App Service Webアプリ「**webapp～～**」へデプロイ
 - Webブラウザーで動作を確認
 
 ■動作確認
-- 画像をアップロード
-
+- Webアプリを使用して画像をアップロード
