--- a/AZ-204/lp01.md
+++ b/AZ-204/lp01.md
@@ -1,11 +1,15 @@
 # ラーニングパス1 App Service
 
 - [ラボの利用方法](https://github.com/hiryamada/notes/tree/main/cloudslice)
+  - 起動するラボ: ラボ1
+  - Windowsにサインイン
   - ラボで使用するファイルの準備
-    - 「ラボファイルをデスクトップにダウンロード」をクリック。
+    - 「ラボ ファイルをデスクトップにダウンロード」をクリック。
     - Allfiles\Labs\01\Starter に、今回の説明で使用するファイルが入っている。
     - 内容を「ドキュメント」などにコピーしておくと作業しやすい。
 - Azure portalへのサインイン
+  - Edgeブラウザーを起動
+  - https://portal.azure.com
   - 日本語化
 - ストレージアカウント
   - ストレージアカウント作成方法
