--- a/AZ-204/lp02.md
+++ b/AZ-204/lp02.md
@@ -16,7 +16,9 @@
 
 「関数アプリ」の動作には、ストレージアカウントが必要。「ホストストレージ」と呼ばれる。Azure portalから作成した場合、このストレージアカウントが自動的に作られる。このストレージアカウントは削除してはいけない。
 
-■イベント
+■トリガーとバインド
+
+[トリガーとバインド](pdf/mod02/%E3%83%88%E3%83%AA%E3%82%AC%E3%83%BC%E3%80%81%E3%83%90%E3%82%A4%E3%83%B3%E3%83%89.pdf)
 
 ■Azure Functions Core Tools
 
