--- a/AZ-204/lp02.md
+++ b/AZ-204/lp02.md
@@ -73,5 +73,14 @@ https://learn.microsoft.com/ja-jp/azure/azure-functions/functions-run-local
   - Echo、GetSettingInfo、Recurringの3つの関数が一覧に表示される
     - ※表示されない場合はWebブラウザーでAzure portalページをリロード、またはVisual Studio Codeから関数を再度デプロイ。
   - Echo関数の動作確認
+    - コード＋テスト
+    - テスト/実行
+    - 適当なJSON `{"x":"1"}` をインプットして実行
   - GetSettingInfo関数の動作確認
+    - コード＋テスト
+    - テスト/実行
+    - `settings.json`の内容が返される
   - Recurring関数の動作確認
+    - コード＋テスト
+    - ファイルシステムログを表示
+    - 30秒間隔でログが出力される
