--- a/AI-102/lp01.md
+++ b/AI-102/lp01.md
@@ -46,7 +46,7 @@ https://azure.microsoft.com/ja-jp/resources/cloud-computing-dictionary/what-is-m
 
 対応するAzureサービス: Azure Machine Learning
 
-※本コース「AI-102」では、機械学習については学習範囲外となる。別のコース「[DP-100: Azure でのデータ サイエンス ソリューションの設計と実装](https://learn.microsoft.com/ja-jp/training/courses/dp-100t01)」で、機械学習について学ぶことができる。
+※本コース「AI-102」では、機械学習の詳細については学習範囲外となる。別のコース「[DP-100: Azure でのデータ サイエンス ソリューションの設計と実装](https://learn.microsoft.com/ja-jp/training/courses/dp-100t01)」で、機械学習の詳細について学ぶことができる。
 
 ■Azure Machine Learningとは？
 
@@ -135,45 +135,11 @@ Dockerコンテナー（データ処理を実行）
 Cognitive Serviceアカウント
 ```
 
-■参考: Azure OpenAI Service
+■Azure OpenAI Service
 
-![](images/ss-2023-04-06-19-46-34.png)
+→ [ラーニングパス12] で学習。
 
-公式サイト:
-https://azure.microsoft.com/ja-jp/products/cognitive-services/openai-service
-
-ドキュメント:
-https://learn.microsoft.com/ja-jp/azure/cognitive-services/openai/overview
-
-一般提供開始のアナウンス(Blog記事):
-https://news.microsoft.com/ja-jp/2023/01/23/230123-general-availability-of-azure-openai-service-expands-access-to-large-advanced-ai-models-with-added-enterprise-benefits/
-
-Azure OpenAI Serviceは、「[OpenAI](https://openai.com/)」が開発している「GPT-4」「ChatGPT」「DALL-E2」「Codex」などのAPIを使用できるAzureのサービス。2023/1/16に一般提供が開始された。
-
-- [GPT-4](https://openai.com/product/gpt-4): [大規模言語モデル](https://atmarkit.itmedia.co.jp/ait/articles/2303/13/news013.html)の一種。ChatGPT、DALL-E2、Codexなどのベースとなる。
-- [ChatGPT](https://openai.com/blog/chatgpt): AIチャットボット
-- [DALL-E2](https://openai.com/product/dall-e-2): 画像生成
-- [Codex](https://openai.com/blog/openai-codex): コード生成、コーディング支援
-
-基本的にユーザーは「プロンプト」を使用して、AIに対して自然言語で指示を行う。
-
-```
-ユーザー
-↓↑
-プロンプト
-↓↑
-ChatGPT
-```
-
-現時点では、このサービスへのアクセスは申請によってのみ許可される（申請をして、許可がされないと、サービスを使用することはできない）。
-
-アクセスを申請するには、https://aka.ms/oai/access のフォームを利用する。
-
-参考: [Microsoftクラウドソリューションアーキテクトによる記事「Azure OpenAI Service を使い始める」](https://zenn.dev/microsoft/articles/1a15305021cd01)
-
-価格はOpenAIが提供するAPIの料金と同様。参考: 「[GPT-4がMicrosoft Azureで利用可能に　まずはプレビュー版](https://www.itmedia.co.jp/news/articles/2303/22/news111.html)」
-
-※本コース「AI-102」の範囲外。現在、このサービスを学習できるMicrosoftの公式トレーニングコースはまだ提供されていない。
+※本コース「AI-102」では、Azure OpenAI Serviceの概要のみ解説する。現在、このサービスを集中的に学習できる（ハンズオンが含まれる）Microsoftの公式トレーニングコースは提供されていない。
 
 ■Azure Bot Serviceとは？
 
