--- a/AZ-305/m07.md
+++ b/AZ-305/m07.md
@@ -9,6 +9,7 @@
 
 - [Azure ADの基礎](../AzureAD/azure-ad.md)
 - PDF: [Azure ADの機能](../AZ-500/pdf/mod1/Azure%20AD機能.pdf)
+- PDF: [認証・承認(認可)](../SC/pdf/Azure%E3%81%AE%E8%AA%8D%E8%A8%BC%E3%81%A8%E6%89%BF%E8%AA%8D.pdf)
 - [多要素認証のソリューション](../AZ-304/mod04-02-mfa.md)
 - [Azure Active Directory B2B](../AZ-304/mod04-06-b2b.md)
 - [Azure Active Directory B2C](../AZ-303/mod01-08-aad-b2c.md)
