--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -270,7 +270,7 @@ Resource Name: 作成済みの「言語サービス」の名前を選択。
 
 .NET (C#)のコンソールアプリから、Cognitive Servicesを使用する。
 
-- [ラボ01 Cognitive Servicesを使用する(言語の検出)](lab01.md)
+- [ラボ01 Cognitive Servicesを使用する(言語の検出)](lab01cs.md)
 
 ■まとめ
 
