--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -100,7 +100,7 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/cognitive-services-ap
 
 ![](images/ss-2023-04-04-08-07-15.png)
 
-■ハンズオン: 「言語サービス」リソースの作成、エンドポイントとキーの確認
+■講師デモ: 「言語サービス」リソースの作成、エンドポイントとキーの確認
 
 Azure portalにアクセス https://portal.azure.com
 
@@ -108,7 +108,7 @@ Azure portalにアクセス https://portal.azure.com
 
 ![](images/ss-2023-04-04-08-05-59.png)
 
-※「Cognitive Servicesマルチアカウント」や「Cognitive Search」ではなく「Cognitive Services」を選ぶこと。
+※「Cognitive Servicesマルチアカウント」や「Cognitive Search」ではなく「Cognitive Services」を選ぶ。
 
 画面左メニュー＞「言語サービス」、「＋作成」
 
@@ -121,7 +121,7 @@ Azure portalにアクセス https://portal.azure.com
 - 名前: lang(乱数) ※(乱数)は適当にキーボードから10桁程度数字を打ち込む
 - 価格レベル: Free F0
   - Free のリソースは複数個作成できない場合がある。
-  - それによるエラーが出た場合は「S」を指定。
+  - それによるエラーが出た場合は「S0」を指定。
 - 「このボックスをオンにすることで・・」: チェック
 - 「確認と作成」、「作成」
 
@@ -228,7 +228,7 @@ Azure Key Vault
 言語サービスのリソース
 ```
 
-■ハンズオン: 言語サービスを利用してみる
+■講師デモ: 言語サービスを利用してみる
 
 Language Studio（ https://language.cognitive.azure.com/ ）を使用すると、作成済みの「言語サービス」リソースを使った操作を簡単に試すことができる。
 
@@ -285,4 +285,6 @@ Resource Name: 作成済みの「言語サービス」の名前を選択。
 - Cognitive Servicesの「マルチサービスアカウント」リソースを作りました
 - C#プログラムから「マルチサービスアカウント」リソースを利用しました(言語の特定)
 
+<!--
 なおCognitive Servicesのリソースは特に削除しなくても（作成したままでも）コスト的には問題ありません。
+-->
