--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -260,7 +260,7 @@ Resource Name: 作成済みの「言語サービス」の名前を選択。
 
 ![](images/ss-2023-04-04-13-54-16.png)
 
-他にもいくつかの言語で試してみよう:
+他にもいくつかの言語で試すことができる:
 
 - 中国語で「ありがとう」: 谢谢
 - フランス語で「今何時？」: Quelle heure est-il
