--- a/AI-102/lp02.md
+++ b/AI-102/lp02.md
@@ -62,6 +62,26 @@ https://learn.microsoft.com/ja-jp/training/paths/provision-manage-azure-cognitiv
     - Azure Container Apps
     - [Azure IoT Edge](../AZ-305/sql-edge.md)
     - オンプレや他クラウド上のKubernetesクラスター
-- [ラボ04 Cognitive Servicesコンテナー](lab04.md)
+
+
+Azure Cognitive Services には、Docker コンテナーのイメージが用意されている。
+
+Azure で使用できるものと同じ API を、コンテナーが稼働する任意の環境（例: オンプレミス、Azure、他のクラウド）で実行できる。
+
+コンテナーには「課金引数」を指定する必要がある。
+
+（コンテナー内のサービスの使用状況が「課金引数」で指定した場所へと送信される）
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/language-detection/how-to/use-containers#billing-arguments
+
+```
+ユーザー
+↓ リクエスト↑判定結果
+Docker コンテナー（言語判定をここで実行）
+↓ 課金情報
+Cognitive Serviceアカウント
+```
+
+- [ラボ04 Cognitive Servicesコンテナー](lab04cs.md)
 
 
