--- a/AI-102/lp02-m01.md
+++ b/AI-102/lp02-m01.md
@@ -95,10 +95,27 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/cognitive-services-ap
 
 - リソース作成時に「Freeプラン」（Free F0）を選択。
 - 無料で利用できるが、呼び出し回数に制限がある。
-- 「マルチサービスアカウント」リソースには対応していない。
-- サブスクリプションで複数個の無料リソースを作成することはできない。2個目のリソースを作成しようとすると、以下のようなメッセージが表示され、Free (F0)は選択できない。
+- 「マルチサービスアカウント」リソースでは、Freeプランは選択できない。
+- サブスクリプションで、**同じ種類の** 複数個の無料リソースを作成することはできない。2個目のリソースを作成しようとすると、以下のようなメッセージが表示され、Free (F0)は選択できない。
 
 ![](images/ss-2023-04-04-08-07-15.png)
+
+- 「言語サービス」の無料リソースを1つ、「音声サービス」の無料サービスを1つ、「資格サービス」の無料リソースを1つ・・・といった作成は可能。
+
+■リソースの削除について
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/manage-resources?tabs=azure-portal
+
+![](images/ss-2023-06-05-12-12-19.png)
+
+- Cognitive Servicesのリソースを作成し、それを削除すると、「削除されたリソース」に移動される。
+- 48時間以内であれば復旧が可能。
+- (48時間が経過する前に、手動で)「消去」することも可能。
+
+![](images/ss-2023-06-05-12-13-18.png)
+
+- 「削除されたリソース」に無料リソースが残っている場合は、 **同じ種類の** 新しい無料リソースは作成できない。
+- リソースが削除されてから48時間経過して無料リソースが「消去」されるか、手動で「削除されたリソース」内の無料リソースを「消去」した場合は、別の新しい無料リソースが作成可能となる。
 
 ■講師デモ: 「言語サービス」リソースの作成、エンドポイントとキーの確認
 
