--- a/AI-102/lp03.md
+++ b/AI-102/lp03.md
@@ -16,9 +16,12 @@ https://learn.microsoft.com/ja-jp/training/paths/process-translate-text-azure-co
 
 ## モジュール1 言語サービスを使用してテキストから分析情報を抽出する
 
-■リソースの作成
+■リソース
 
-「言語サービス」リソース、または「Cognitive Servicesマルチサービスアカウント」を使用。
+以下のいずれかを使用。
+
+- 「言語サービス」リソース
+- 「Cognitive Servicesマルチサービスアカウント」
 
 ■言語検出 language detection
 
@@ -26,7 +29,9 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/lang
 
 ドキュメントを書くのに使われている言語を検出できる。
 
-言語の名前・言語コードが返される。
+言語の名前（Japanese, Englishなど）・言語コード（ja, enなど）が返される。
+
+※言語コードの一覧: https://so-zou.jp/web-app/tech/data/code/language.htm
 
 ■キー フレーズ抽出 key phrase extraction
 
@@ -41,13 +46,13 @@ https://www.ogis-ri.co.jp/otc/hiroba/technical/similar-document-search/part5.htm
 ```
 "食べ物はおいしくて、スタッフがすばらしかった"
 ↓
-"食べ物"  "すばらしいスタッフ"
+"おいしい食べ物", "すばらしいスタッフ"
 ```
 
 ```
 "The food was delicious and the staff were wonderful"
 ↓
-"food" and "wonderful staff"
+"delicious food", "wonderful staff"
 ```
 
 ■感情分析 sentiment analytics
@@ -62,7 +67,9 @@ https://www.cloud-contactcenter.jp/blog/sentiment-analysis-in-business.html
 
 応用例: Azure DevOpsの「リリースパイプライン」の「ゲート」への応用
 
-※参考資料 PDF: [Azure DevOpsのパイプライン](https://github.com/hiryamada/notes/blob/89854cb35720fd60c60df1ce09c3eab635ce8381/AZ-400/pdf/Azure%20Pipelines%20%E8%A3%9C%E8%B6%B3.pdf)
+※参考資料: [Azure DevOpsの概要](../AZ-400/pdf/Azure%20DevOps%E3%81%AE%E6%A6%82%E8%A6%81.pdf)
+
+※参考資料(PDF): [Azure Pipelinesのゲート](../AZ-400/pdf/Azure%20Pipelines%20%E8%A3%9C%E8%B6%B3.pdf)
 
 「ゲート」は、Azure Pipelinesの「クラシックパイプライン」の機能の一つ。機械的なチェックにより、デプロイの実行やステージ進行をストップさせる機能。
 
@@ -153,7 +160,8 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/translator/custom-tra
 
 ■ラボ
 
-[ラボ06 テキスト翻訳](lab06.md)
+- [ラボ05 テキストの分析](lab05cs.md)
+- [ラボ06 テキストの翻訳](lab06cs.md)
 
 ■まとめ
 
