--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -54,15 +54,14 @@ ja-JP-ShioriNeural (女性)
 
 ## モジュール2 音声を音声サービスで翻訳する
 
+https://learn.microsoft.com/ja-jp/training/modules/translate-speech-speech-service/?ns-enrollment-type=learningpath&ns-enrollment-id=learn.wwl.process-translate-speech-azure-cognitive-speech-services
+
+音声の翻訳は、音声入力を認識して指定された言語に変換し、1 つ以上の他の言語でのトランスクリプトの翻訳を返すことにより、音声認識を構築します。
 
 ## ラボ
 
-- [ラボ07 スピーチ](lab07.md)
-
-<!--
-- ラボ08 スピーチ翻訳
--->
-
+- [ラボ07 音声の認識と合成](lab07cs.md)
+- [ラボ08 音声の翻訳](lab08cs.md)
 
 <!--
 ■ ラボ手順書
