--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -52,6 +52,28 @@ ja-JP-NaokiNeural (男性)
 ja-JP-ShioriNeural (女性)
 ```
 
+■SSML (Speech Synthesis Markup Language)による制御
+
+https://learn.microsoft.com/ja-jp/training/modules/transcribe-speech-input-text/6-speech-synthesis-markup
+
+音声合成マークアップ言語 (SSML) を使用すると、音声出力をより細かく制御できる。
+
+```
+<speak version="1.0" xmlns="http://www.w3.org/2001/10/synthesis" 
+                     xmlns:mstts="https://www.w3.org/2001/mstts" xml:lang="en-US"> 
+    <voice name="en-US-AriaNeural"> 
+        <mstts:express-as style="cheerful"> 
+          I say tomato 
+        </mstts:express-as> 
+    </voice> 
+</speak>
+```
+
+たとえば`<mstts:express-as style="cheerful"> `で、「肯定的で幸せそうな語調」となる。
+
+https://learn.microsoft.com/ja-jp/azure/cognitive-services/speech-service/speech-synthesis-markup-voice#speaking-styles-and-roles
+
+
 ## モジュール2 音声を音声サービスで翻訳する
 
 https://learn.microsoft.com/ja-jp/training/modules/translate-speech-speech-service/?ns-enrollment-type=learningpath&ns-enrollment-id=learn.wwl.process-translate-speech-azure-cognitive-speech-services
