--- a/AI-102/lp04.md
+++ b/AI-102/lp04.md
@@ -80,6 +80,11 @@ https://learn.microsoft.com/ja-jp/training/modules/translate-speech-speech-servi
 
 音声の翻訳は、音声入力を認識して指定された言語に変換し、1 つ以上の他の言語でのトランスクリプトの翻訳を返すことにより、音声認識を構築します。
 
+■リソース
+
+専用の "音声" リソースまたはマルチサービスの "Cognitive Services" リソースのいずれかを使用。
+
+
 ## ラボ
 
 - [ラボ07 音声の認識と合成](lab07cs.md)
