--- a/AI-102/lp05.md
+++ b/AI-102/lp05.md
@@ -112,10 +112,16 @@ https://language.cognitive.azure.com
 
 ■ ラボ
 
+[ラボ9 「会話言語理解(CLU)」リソースの作成＋アプリの作成](lab09cs.md)
+
+※もともとラボ9/ラボ10の2つの手順で構成されていましたが、1つにまとめました。
+
+<!--
 以下のラボを連続して実行します。（ラボ10を実施するにはラボ09で作成するモデルが必要です）
 
 - [ラボ09 「会話言語理解(CLU)」リソースの作成](lab09.md)
 - [ラボ10 「会話言語理解(CLU)」を使用するアプリの作成](lab10.md)
+-->
 
 ■まとめ
 
@@ -126,5 +132,5 @@ https://language.cognitive.azure.com
   - 「会話言語理解」（Conversational Language Understanding、CLU）
   - モデル
   - 発話
-  - エンティティ
   - 意図
+  - エンティティ
