--- a/AI-102/lp06.md
+++ b/AI-102/lp06.md
@@ -126,15 +126,15 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/language-service/ques
 
 ■「チャットボット」はどうやって作る？
 
-通常、チャットボットの開発には「Bot Framework SDK」（ライブラリ）、「Bot Framework Composer」（ツール）「Bot Framework Emulator」（ツール）などを使用する。
+このあとのラボ（ラボ12）では、構築済みのナレッジベースからチャットボットを簡易生成する機能を使用する。
+
+なお、通常、チャットボットの開発には「Bot Framework SDK」（ライブラリ）、「Bot Framework Composer」（ツール）「Bot Framework Emulator」（ツール）などを使用する。
 
 - C#などのコードを使用して、ボットを作成するには、「[Bot Framework SDK](https://github.com/microsoft/botframework-sdk)」を使用する。
 - コードを書かずに、ボットを作成するには、「[Bot Framework Composer](https://github.com/microsoft/BotFramework-Composer)」を使用する。
 - 作成したボットをテストするには、「[Bot Framework Emulator](https://github.com/microsoft/BotFramework-Emulator)」を使用する。
 
-これらについて詳しくは、別の（この後の）ラーニングパスで解説。
-
-このあとのラボ（ラボ12）では、構築済みのナレッジベースからチャットボットを簡易生成する機能を使用する。
+これらについて詳しくは、この後のラーニングパス 8 で解説。
 
 ■「チャットボット」はどうやって運用する？
 
