--- a/AI-102/lp08.md
+++ b/AI-102/lp08.md
@@ -7,19 +7,42 @@ https://learn.microsoft.com/ja-jp/training/paths/create-conversational-ai-soluti
 - モジュール2 Bot Framework Composer を使用してボットを作成する
   - ラボ14 ボット(WeatherBot)の作成
 
+
+## ボットの開発について
+
+ラーニングパス6 では、「質問応答」のプロジェクト（ナレッジベース）内から、簡易的なチャットボットを生成した。
+
+C#などのコードなどを使用して、より複雑な動作をするボットを開発するには、「Bot Framework SDK」を使用する。
+
+コードを書かずに、ボットを開発するには、「Bot Framework Composer」というGUIツールを使用する。
+
+## C#などのコードを使用したボットの開発
+
+■Bot Framework SDK
+
+C#などのコードを使用して、ボットを作成するには、「[Bot Framework SDK](https://github.com/microsoft/botframework-sdk)」を使用する。
+
+■Bot Framework Emulator
+
+作成したボットをテストするには、「[Bot Framework Emulator](https://github.com/microsoft/BotFramework-Emulator)」を使用する。
+
+■ ラボ13
+
+- [ラボ13 チャットボット(TimeBot)の作成](lab13.md)
+  - Bot Framework SDKを使用。
+  - C#でコードを記述。
+
+## Bot Framework Composer
+
 ■Bot Framework Composer
 
-コードを書かずにボットを作成できるツール。
+コードを書かずに、ボットを作成するには、「[Bot Framework Composer](https://github.com/microsoft/BotFramework-Composer)」を使用する。
+
 
 デザイナー画面上でフローチャートのようなものを入力して、ボットを作成する。
 
 作成したボットをローカルで実行して動作を確認したり（Bot Framework Emulatorを背後で起動）、Azureにパブリッシュ（発行、公開）する機能なども持つ。
 
-■ボット
-
-C#またはNode.jsのボットを作成できる。
-
-ボットに、AIのサービスを組み込むことができる。
 
 ■日本語化
 
@@ -46,11 +69,8 @@ Bot Framework Composerを起動
 
 リセットすると、初期状態（あいさつ）からボットとの会話が始まる。
 
-■ ラボの概要
+■ ラボ 14
 
-- [ラボ13 チャットボット(TimeBot)の作成](lab13.md)
-  - Bot Framework SDKを使用。
-  - C#でコードを記述。
 - [ラボ14 チャットボット(WeatherBot)の作成](lab14.md)
   - Bot Framework Composerを使用。
   - コードを記述せず、GUIツールでボットを設計。
