--- a/AI-102/lp08.md
+++ b/AI-102/lp08.md
@@ -20,11 +20,17 @@ C#などのコードなどを使用して、より複雑な動作をするボッ
 
 ■Bot Framework SDK
 
-C#などのコードを使用して、ボットを作成するには、「[Bot Framework SDK](https://github.com/microsoft/botframework-sdk)」を使用する。
+https://github.com/microsoft/botframework-sdk
+
+C#などのコードを使用して、ボットを作成するためのSDK(Software Development Kit)。
+
+具体的には`dotnet new echobot` といったコマンドで、.NETのボットのプロジェクトを作成する。すると、そのプロジェクトにBot Framework SDKのライブラリが追加される。
 
 ■Bot Framework Emulator
 
-作成したボットをテストするには、「[Bot Framework Emulator](https://github.com/microsoft/BotFramework-Emulator)」を使用する。
+https://github.com/microsoft/BotFramework-Emulator
+
+作成したボットを開発環境でテストするためのツール。
 
 ■ ラボ13
 
@@ -32,35 +38,46 @@ C#などのコードを使用して、ボットを作成するには、「[Bot F
   - Bot Framework SDKを使用。
   - C#でコードを記述。
 
+■ ボットをAzureにデプロイするには？
+
+`dotnet new echobot`などのコマンドを使用して作成したボットのプロジェクトには、`DeploymentTemplates`というフォルダが含まれている。
+
+このフォルダ内に、AzureにデプロイするためのARMテンプレートや、デプロイの手順書（READMEファイル）が含まれている。
+
+![](images/ss-2023-06-08-06-38-07.png)
+
+これらを使用して、Azureに必要なリソースを作成し、デプロイできる。
+
+
+Azureのドキュメントも用意されている:
+https://learn.microsoft.com/ja-jp/azure/bot-service/provision-and-publish-a-bot?view=azure-bot-service-4.0&tabs=userassigned%2Ccsharp
+
 ## Bot Framework Composer
 
-■Bot Framework Composer
+■Bot Framework Composerとは？
 
-コードを書かずに、ボットを作成するには、「[Bot Framework Composer](https://github.com/microsoft/BotFramework-Composer)」を使用する。
+https://github.com/microsoft/BotFramework-Composer
 
+ボットを開発するためのGUIツール。Windows/Mac/Linuxに対応。
 
-デザイナー画面上でフローチャートのようなものを入力して、ボットを作成する。
+デザイナー画面上でフローチャートを入力して、ボットを作成できる。C#などのコードを記述する必要がない。
 
 作成したボットをローカルで実行して動作を確認したり（Bot Framework Emulatorを背後で起動）、Azureにパブリッシュ（発行、公開）する機能なども持つ。
-
 
 ■日本語化
 
 日本語化が可能。ただしすべてのUIが日本語化されるわけではない。
 
-左下＞Composer Settings＞composer lanuage＞日本語
+左下歯車アイコン＞Composer Settings＞composer lanuage＞日本語
 
 Configure＞Localization で、ボットの会話を日本語化（ローカライゼーション）したり、メッセージを直接日本語化することで、ボットが日本語を出力するようにすることも可能。
 
+■簡単な使い方
 
-■最も簡単な使い方
-
-Bot Framework Composerを起動
-左メニュー＞ホーム＞作成＞Empty Bot
-
-画面右上の「Start bot」でボットを起動、「Webチャットを開始」をクリック
-
-画面右側にチャットのような画面が出てくる。画面右下でMessageをタイプすると、ボットが回答する。
+- Bot Framework Composerを起動
+- 左メニュー＞ホーム＞作成＞Empty Bot
+- 画面右上の「Start bot」でボットを起動、「Webチャットを開始」をクリック
+- 画面右側にチャットのような画面が出てくる。画面右下でMessageをタイプすると、ボットが回答する。
 
 ただし、Empty Botは「Welcome to your bot」というあいさつをする他は、どんなメッセージにも「Sorry, I didn't get that」
 （わかりません）としか答えない。
@@ -74,4 +91,6 @@ Bot Framework Composerを起動
 - [ラボ14 チャットボット(WeatherBot)の作成](lab14.md)
   - Bot Framework Composerを使用。
   - コードを記述せず、GUIツールでボットを設計。
+  - Azureにデプロイ。
+
 
