--- a/AI-102/lp09.md
+++ b/AI-102/lp09.md
@@ -46,16 +46,16 @@ https://learn.microsoft.com/ja-jp/azure/cognitive-services/computer-vision/conce
 
 ■Face APIについて
 
-- 機能へのアクセスが制限される場合がある。
 - 感情・性別・表情などを予測するAPIは廃止される。
+- プライバシーを尊重するための決定
+- 2022年6月21日から、新規ユーザーは利用不可
+- 2023年6月30日までに、既存ユーザーはサービス利用を中止する必要がある
+- 詳細: https://azure.microsoft.com/ja-jp/updates/facelimitedaccess/
 
-https://azure.microsoft.com/ja-jp/updates/facelimitedaccess/
 
-https://cptechweb.teldevice.co.jp/hc/ja/articles/8632634468249--%E9%87%8D%E8%A6%81-Cognitive-Services-Face-API-%E3%81%AE%E5%BB%83%E6%AD%A2%E3%81%A8%E5%88%A9%E7%94%A8%E5%88%B6%E9%99%90%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6
+https://www.aist.go.jp/aist_j/magazine/20220615.html
 
-https://www.itmedia.co.jp/news/articles/2206/22/news086.html
-
-＞プライバシーについての懸念の高まりなどを受けての決定
+＞感情というのは、ある種、最大の個人情報であり、個人にとっては知られたくない情報という面もあります。表情などのデータを日常的に取られて、データとして蓄積されて使われていくという社会になったとき、私たちがどこまで受容していけるのか。データを提供することが良いことにつながっていくという理解を広げて、社会的な受容性をもっと上げていかないと、誰もデータを提供したいとは思わないでしょう。
 
 ■ ラボ
 
