--- a/AI-102/lp01.md
+++ b/AI-102/lp01.md
@@ -169,7 +169,11 @@ https://learn.microsoft.com/ja-jp/training/modules/prepare-to-develop-ai-solutio
 
 対話型の「チャットボット」を構築・運用するためのサービス。
 
-チャットボットの例: [ASKUL様の「アオイくん」](https://www.askul.co.jp/f/help/)
+チャットボットの例:
+
+- [ASKUL様の「アオイくん」](https://www.askul.co.jp/f/help/)
+- [DAZN AIチャットボット](https://www.dazn.com/ja-JP/help/articles/how-do-i-contact-dazn)
+
 
 チャットボットの開発には「Bot Framework SDK」（ライブラリ）、「Bot Framework Composer」（ツール）「Bot Framework Emulator」（ツール）なども使用される。
 
