--- a/AI-102/lp09.md
+++ b/AI-102/lp09.md
@@ -59,7 +59,7 @@ https://www.aist.go.jp/aist_j/magazine/20220615.html
 
 ■ ラボ
 
-- [ラボ15 コンピュータビジョン](lab15.md)
+- [ラボ15 コンピュータビジョン](lab15cs.md)
 
 <!--
 
