--- a/SC-300/lp01.md
+++ b/SC-300/lp01.md
@@ -4,17 +4,17 @@
 
 ■Microsoft Learn
 
-
+https://learn.microsoft.com/ja-jp/training/paths/implement-identity-management-solution/
 
 ■講義
 
-- ラボ00（Premium P2ライセンス有効化）
 - モジュール1 Azure Active Directory の初期構成を実装する
   - Azure ADの概要
     - [Azure AD入門](../AzureAD/Azure%20AD入門.pdf)
     - [ライセンス](../AzureAD/license.md)
     - [アクセス方法](../AzureAD/urls.md)
     - [Microsoft Entra](../SC/entra.md)
+    - [ラボ 01 (ユーザー)](lab01.md)
   - カスタマイズ
     - [会社ブランドの構成](../AzureAD/brand.md)
     - [カスタムドメインの割り当て](../AzureAD/custom-domain.md)
@@ -27,7 +27,6 @@
   - ユーザー作成
   - グループ作成
   - ライセンスの割り当て
-  - ラボ 01
 - モジュール3 外部 ID を実装および管理する
   - [Azure AD B2B](../AZ-304/mod04-06-b2b.md)
     - ゲストユーザー
