--- a/SC-300/lp01.md
+++ b/SC-300/lp01.md
@@ -18,7 +18,7 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-identity-management-s
   - カスタマイズ
     - [会社ブランドの構成](../AzureAD/brand.md)
     - [カスタムドメインの割り当て](../AzureAD/custom-domain.md)
-      - ラボ 02 Azure ADのカスタマイズ
+      - [ラボ 02 Azure ADのカスタマイズ](lab02.md)
   - ロール
     - [ロール・ポリシー全体像](../AZ-104/pdf/mod02/ロール・ポリシー全体像.pdf)
     - [Azure ADロール](../AzureAD/role.md)
@@ -33,13 +33,13 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-identity-management-s
   - [Azure AD B2C](../AZ-303/mod01-08-aad-b2c.md)
   - [動的グループ](../AzureAD/group.md)
     - （メンバーシップの種類＝動的ユーザー）
-  - ラボ 03（動的グループ）
+  - [ラボ 03（動的グループ）](lab03.md)
   - ラボ 05（ゲストユーザーの招待）
 - モジュール4 ハイブリッド ID を実装および管理する
   - [Azure AD Connect](../AZ-303/mod02-01-hybridid.md)
   - [プライマリ更新トークン (Primary Refresh Token、PRT)](../SC/PRT.md)
 
-
+<!--
 
 ■ ラボ手順書
 
@@ -52,27 +52,9 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA
 ラボのファイル（ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります）
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/archive/refs/heads/master.zip
 
+
 ■ ラボの概要
 
-
-- 00
-  - 前半（Azure Active Directory Premium P2 試用版ライセンスを追加）のみ実施
-  - 後半（Azure Pass を引き換える）はスキップ
-- 01
-  - ユーザー作成
-  - 「アプリケーション管理者」ロールを割り当て・割り当てを削除
-  - CSVファイルによるユーザーの一括インポート
-  - ユーザーの削除と復元
-  - ライセンスの割り当て（「利用場所」設定が必要、Premium P2を割り当て）
-- 02
-  - カスタムドメインの割り当て（現在のドメイン名の頭に`sales.`を付けたもの）
-  - テナントのプロパティで名前と技術部連絡先を変更
-  - 「国/リージョン」と「場所」は変更できないことを確認
-  - テナントIDを確認する
-  - 「プライバシーに関する情報」を次に設定 `https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/blob/master/Allfiles/Labs/Lab2/SC-300-Lab_ContosoPrivacySample.pdf`
-- 03
-  - Exercise 1はスキップ(Microsoft 365ライセンスが必要)
-  - Exercise 2 動的グループ
 - 04
   - ユーザー＞ユーザー設定＞外部コラボレーションの設定を管理します
     - 「ユーザー フローによるゲスト セルフサービスのサインアップを有効にする」を有効化
@@ -85,3 +67,5 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/ar
   - ゲストユーザーの招待
 - 06
   - スキップ(Microsoft 365ライセンスが必要)
+
+-->
