--- a/SC-300/lp01.md
+++ b/SC-300/lp01.md
@@ -34,7 +34,8 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-identity-management-s
   - [動的グループ](../AzureAD/group.md)
     - （メンバーシップの種類＝動的ユーザー）
   - [ラボ 03（動的グループ）](lab03.md)
-  - ラボ 05（ゲストユーザーの招待）
+  - [ラボ 04 外部コラボレーションの設定](lab04.md)
+  - [ラボ 05（ゲストユーザーの招待）](lab05.md)
 - モジュール4 ハイブリッド ID を実装および管理する
   - [Azure AD Connect](../AZ-303/mod02-01-hybridid.md)
   - [プライマリ更新トークン (Primary Refresh Token、PRT)](../SC/PRT.md)
@@ -55,14 +56,7 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/ar
 
 ■ ラボの概要
 
-- 04
-  - ユーザー＞ユーザー設定＞外部コラボレーションの設定を管理します
-    - 「ユーザー フローによるゲスト セルフサービスのサインアップを有効にする」を有効化
-  - External Identities＞すべてのIDプロバイダー＞メールのワンタイム パスコード（Yesを確認）
-  - 外部コラボレーションの設定
-    - 「ゲスト ユーザーのアクセスは、各自のディレクトリ オブジェクトのプロパティとメンバーシップに制限されます (最も制限が多い)」を選択
-    - 「メンバー アクセス許可を持つゲストを含むメンバー ユーザーと特定の管理者ロールに割り当てられたユーザーがゲスト ユーザーを招待できる」を選択
-    - 「ユーザー フローによるゲスト セルフサービスのサインアップを有効にする」を「いいえ」に
+
 - 05
   - ゲストユーザーの招待
 - 06
