--- a/SC-300/lp01.md
+++ b/SC-300/lp01.md
@@ -34,11 +34,20 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-identity-management-s
   - [Azure AD B2B](../AZ-304/mod04-06-b2b.md)
     - ゲストユーザー
   - [Azure AD B2C](../AZ-303/mod01-08-aad-b2c.md)
+  - PDF: [B2B と B2Cの比較](pdf/b2b%20vs%20b2c.pdf)
   - [ラボ 04 外部コラボレーションの設定](lab04.md)
   - [ラボ 05（ゲストユーザーの招待）](lab05.md)
+  - [ラボ 06](https://microsoftlearning.github.io/SC-300-Identity-and-Access-Administrator.JA-JP/Instructions/Labs/Lab_06_AddFederatedIdentityProvider.html)
+    - (本トレーニングでは省略)
+    - 実施する場合は Googleアカウントが必要
+    - 15分程度
 - モジュール4 ハイブリッド ID を実装および管理する
   - [Azure AD Connect](../AZ-303/mod02-01-hybridid.md)
   - [プライマリ更新トークン (Primary Refresh Token、PRT)](../SC/PRT.md)
+  - [ラボ 07](https://microsoftlearning.github.io/SC-300-Identity-and-Access-Administrator.JA-JP/Instructions/Labs/Lab_07_AddHybridIdentityWithAzureADConnect.html)
+    - (本トレーニングでは省略)
+    - Azure AD Connectを構成
+    - 60分以上
 
 <!--
 
