--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -11,15 +11,17 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
 
 - モジュール1 多要素認証(MFA)
   - [MFA](../AzureAD/mfa.md)
-  - ラボ08 MFA有効化
+  - [ラボ08 MFA有効化](lab08.md)
 - モジュール2 ユーザー認証のオプション(パスワードレス等)
   - [パスワードレス認証](../SC/passwordless.md)
   - [OATH](../SC/oath.md): 2004年～
   - [FIDO](../SC/fido.md): 2012年～
   - [スマートロックアウト](../SC/smart-lockout.md)
     - ラボ12 Azure AD スマートロックアウト
+  - [仮想マシンの Azure AD ユーザー認証を構成する](https://learn.microsoft.com/ja-jp/training/modules/manage-user-authentication/10-configure-azure-ad-user-authentication-virtual-machines)
+    - [ラボ10 仮想マシンのAzure AD認証](lab10.md)
   - セルフサービスパスワードリセット
-    - ラボ09 セルフサービスパスワードリセットの有効化
+    - [ラボ09 セルフサービスパスワードリセットの有効化](lab09.md)
   - ラボ10 Windows VM / Linux VMでのAzure AD認証
 - モジュール3 条件付きアクセス
   - [Azure AD 条件付きアクセス](../SC/conditional-access.md)
