--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -22,7 +22,7 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
     - [ラボ10 仮想マシンのAzure AD認証](lab10.md)
   - セルフサービスパスワードリセット
     - [ラボ09 セルフサービスパスワードリセットの有効化](lab09.md)
-  - ラボ10 Windows VM / Linux VMでのAzure AD認証
+  - [ラボ10 Windows VM / Linux VMでのAzure AD認証](lab10.md)
 - モジュール3 条件付きアクセス
   - [Azure AD 条件付きアクセス](../SC/conditional-access.md)
   - ラボ13 条件付きアクセス
@@ -36,8 +36,7 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
   - Key Vault アクセス ポリシー / RBAC
     - [Key Vault](../AZ-303/mod11-02-keyvault.md)
   - Privileged Identity Management (PIM)
-    - →ラーニングパス4で解説。
-  - ラボ11 Azureロール + PIM→ラーニングパス4学習後に実施。
+  - [ラボ11 Azureロール](lab11.md)
   - ラボ16 Key Vault / マネージドID
 
 ■ ラボ手順書
