--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -17,7 +17,7 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
   - [OATH](../SC/oath.md): 2004年～
   - [FIDO](../SC/fido.md): 2012年～
   - [スマートロックアウト](../SC/smart-lockout.md)
-    - ラボ12 Azure AD スマートロックアウト
+    - [ラボ12 Azure AD スマートロックアウト](lab12.md)
   - [仮想マシンの Azure AD ユーザー認証を構成する](https://learn.microsoft.com/ja-jp/training/modules/manage-user-authentication/10-configure-azure-ad-user-authentication-virtual-machines)
     - [ラボ10 仮想マシンのAzure AD認証](lab10.md)
   - セルフサービスパスワードリセット
