--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -24,18 +24,20 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
     - [ラボ09 セルフサービスパスワードリセットの有効化](lab09.md)
 - モジュール3 条件付きアクセス
   - [Azure AD 条件付きアクセス](../SC/conditional-access.md)
-  - ラボ13 条件付きアクセス
+  - [ラボ13 条件付きアクセス](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_13_ImplementAndTestAConditionalAccessPolicy.md)
 - モジュール4 Identity Protection
   - [Azure AD Identity Protection](https://github.com/hiryamada/notes/blob/main/AZ-500/mod01/mod01-03-idp.md)
     - [Microsoft Sentinel + Identity Protection](../AZ-500/pdf/mod4/Microsoft%20Sentinel%20まとめ.pdf)
-  - ラボ14/15 Azure AD Identity Protection
+  - [ラボ14 Azure AD Identity Protection / ユーザーリスク・サインインリスクポリシー](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_14_EnableSignRiskPolicy.md)
+  - [ラボ15 Azure AD Identity Protection / MFA登録ポリシー](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_15_ConfigureAAD_MultiFactorAuthRegPolicy.md)
 - モジュール5 Azureリソースのアクセス管理
   - [Azureの認証と承認](../SC/pdf/Azureの認証と承認.pdf)
   - [マネージドID](../AZ-305/managed-id.md)
   - Key Vault アクセス ポリシー / RBAC
     - [Key Vault](../AZ-303/mod11-02-keyvault.md)
-    - ラボ16 Key Vault / マネージドID
+    - [ラボ16 Key Vault / マネージドID](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_16_UsingAzureKeyVaultForManagedIdentities.md)
   - Privileged Identity Management (PIM)
+    - [Azure AD Privileged Identity Management](../SC/pim.md)
     - [ラボ11 Azureロール](lab11.md)
 
 ■ ラボ手順書
