--- a/SC-300/lp02.md
+++ b/SC-300/lp02.md
@@ -36,9 +36,13 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-authentication-access
   - Key Vault アクセス ポリシー / RBAC
     - [Key Vault](../AZ-303/mod11-02-keyvault.md)
     - [ラボ16 Key Vault / マネージドID](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_16_UsingAzureKeyVaultForManagedIdentities.md)
+      - VMはWindows Serverを使用し、マネージドIDを有効化
+      - Key Vaultを作成し、サインイン中のユーザーには Key Vault Secrets Officer （キーコンテナーシークレット管理者）、マネージドIDには Key Vault Secrets Use (キーコンテナーシークレットユーザー)を割り当てる
+      - VMにRDPで接続してその中でPowerShellコマンドを実行
   - Privileged Identity Management (PIM)
     - [Azure AD Privileged Identity Management](../SC/pim.md)
-    - [ラボ11 Azureロール](lab11.md)
+    - [ラボ11 PIMでAzureロールを割り当てる](lab11.md)
+    - [ラボ26 PIMでAzure ADロールを割り当てる](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_26_ConfigurePrivilegedIdentityManagementForAADRoles.md) - 省略
 
 ■ ラボ手順書
 
