--- a/SC-300/lp03.md
+++ b/SC-300/lp03.md
@@ -12,14 +12,17 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
 - モジュール1 エンタープライズ アプリの統合を計画し、設計する
   - ユニット1～3, 7: 組織で使用しているアプリの監視・オンプレAD FSからの移行
     - [Microsoft Defender for Cloud Apps](../SC/mdca.md)
-    - ラボ17/18 Microsoft Defender for Cloud Apps
+    - [ラボ17 Microsoft Defender for Cloud Apps](https://microsoftlearning.github.io/SC-300-Identity-and-Access-Administrator.JA-JP/Instructions/Labs/Lab_17_DefenderForCloudAppsDiscoveryAndRestrictions.html)
+      - ※実際のアプリへのアクセス制御にはMicrosoft Defender for Endpointの導入が必要ですが、このラボでは省略しています。
+    - ラボ18 Microsoft Defender for Cloud Apps(手順が正しく動作しないためスキップ)
   - ユニット4: Azure ADへのアプリの追加・アプリの登録
     - (Azure AD)[エンタープライズアプリケーションの追加](../SC/enterprise-app.md)
     - (Azure AD)[アプリの登録](../SC/app-registration.md)
-    - ラボ20 アプリのアクセス管理（エンタープライズアプリケーション）
+    - [ラボ20 アプリのアクセス管理（エンタープライズアプリケーション）](https://microsoftlearning.github.io/SC-300-Identity-and-Access-Administrator.JA-JP/Instructions/Labs/Lab_20_ImplementAccessManagementForApps.html)
   - ユニット5～6: ロールによる、アプリ管理の委任
     - (Azure AD)[アプリの管理のためのロール、ロールの割り当て](../SC/app-role.md)
 - モジュール2 エンタープライズ アプリの統合を実装し、監視する
+  - PDFまとめ: [Microsoft ID Platform](../SC/pdf/Microsoft%20ID%20Platform.pdf)
   - [Microsoft ID プラットフォーム](../AZ-204/mod06-04-id-platform.md)
   - [OAuth 2.0 / OpenID Connect](../general/oauth-oidc.md)
   - [Microsoft Authentication Libraries(MSAL)](../AZ-204/mod06-02-msal.md)
@@ -28,7 +31,6 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
   - Azure Active Directory レポート
     - 使用状況と分析情報
       - https://learn.microsoft.com/ja-jp/azure/active-directory/reports-monitoring/concept-usage-insights-report
-  - アプリケーション コレクション
 - モジュール3 アプリの登録を実装する
   - アプリの登録
     - [同意のフレームワーク](../SC/consent-framework.md)
@@ -38,13 +40,9 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
     - アクセス許可を構成する
     - アプリケーションに管理者の同意を付与する
   - [Microsoft Graph](../AZ-204/mod06-08-graph.md)
-  - PDFまとめ: [Microsoft ID Platform](../SC/pdf/Microsoft%20ID%20Platform.pdf)
   - ラボ19 アプリの登録
   - ラボ21 アプリケーションの同意
 
-■講義（ラーニングパス4）
-
-- [Azure AD Privileged Identity Management](../SC/pim.md)
 
 ■ ラボ手順書
 
