--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -18,9 +18,7 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
   - [Azure ADアクセスレビュー](../AZ-303/mod10-02-access-review.md)
   - ラボ25 Azure AD アクセスレビュー
 - モジュール3 特権アクセスを計画し、実装する
-  - PDF: [Azure AD Privileged Identity Management](../SC/pim.md)
-  - ラボ11 Azure ロール + PIM
-  - ラボ26 Azure ADロール + PIM
+  - (PIMについてはラーニングパス2で解説済み)
 - モジュール4 Azure Active Directory を監視および保守する
   - [Azure ADサインインログ](../AZ-303/pdf/mod15/%E3%83%A1%E3%83%88%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%82%B0%E3%81%AE%E4%BE%8B.pdf)
   - [Log Analytics](../log-analytics/log-analytics.md)
