--- a/SC-300/lp03.md
+++ b/SC-300/lp03.md
@@ -14,10 +14,12 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
     - [Microsoft Defender for Cloud Apps](../SC/mdca.md)
     - [ラボ17 Microsoft Defender for Cloud Apps](https://microsoftlearning.github.io/SC-300-Identity-and-Access-Administrator.JA-JP/Instructions/Labs/Lab_17_DefenderForCloudAppsDiscoveryAndRestrictions.html)
       - ※実際のアプリへのアクセス制御にはMicrosoft Defender for Endpointの導入が必要ですが、このラボでは省略しています。
-    - ラボ18 Microsoft Defender for Cloud Apps(手順が正しく動作しないためスキップ)
+    - [ラボ18 Microsoft Defender for Cloud Apps(手順が正しく動作しないためスキップ)](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_18_DefenderForCloudAppsAccessPolicies.md)
   - ユニット4: Azure ADへのアプリの追加・アプリの登録
-    - (Azure AD)[エンタープライズアプリケーションの追加](../SC/enterprise-app.md)
+    - PDF資料: [アプリの登録 / エンタープライズアプリケーションの追加](pdf/%E3%82%A2%E3%83%97%E3%83%AA%E3%81%AE%E7%99%BB%E9%8C%B2%E3%81%A8%E3%82%A8%E3%83%B3%E3%82%BF%E3%83%BC%E3%83%97%E3%83%A9%E3%82%A4%E3%82%BA%E3%82%A2%E3%83%97%E3%83%AA%E3%82%B1%E3%83%BC%E3%82%B7%E3%83%A7%E3%83%B3%E3%81%AE%E8%BF%BD%E5%8A%A0.pdf)
     - (Azure AD)[アプリの登録](../SC/app-registration.md)
+    - (Azure AD)[エンタープライズアプリケーションの追加](../SC/enterprise-app.md)
+    - [ラボ19 アプリの登録](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_19_RegisterAnApplication.md)
     - [ラボ20 アプリのアクセス管理（エンタープライズアプリケーション）](https://microsoftlearning.github.io/SC-300-Identity-and-Access-Administrator.JA-JP/Instructions/Labs/Lab_20_ImplementAccessManagementForApps.html)
   - ユニット5～6: ロールによる、アプリ管理の委任
     - (Azure AD)[アプリの管理のためのロール、ロールの割り当て](../SC/app-role.md)
@@ -32,18 +34,12 @@ https://learn.microsoft.com/ja-jp/training/paths/implement-access-management-for
     - 使用状況と分析情報
       - https://learn.microsoft.com/ja-jp/azure/active-directory/reports-monitoring/concept-usage-insights-report
 - モジュール3 アプリの登録を実装する
-  - アプリの登録
-    - [同意のフレームワーク](../SC/consent-framework.md)
-    - アプリケーションオブジェクト ... 「アプリの登録」画面で管理
-    - サービスプリンシパル ... 「エンタープライズ アプリケーション」画面で管理
-    - アプリケーションの登録
-    - アクセス許可を構成する
-    - アプリケーションに管理者の同意を付与する
+  - （大部分はモジュール1で解説済み）
+  - [同意のフレームワーク](../SC/consent-framework.md)
+    - [ラボ21 アプリケーションの同意](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_21_GrantTenantWideAdminConsentToAnApplication.md)
   - [Microsoft Graph](../AZ-204/mod06-08-graph.md)
-  - ラボ19 アプリの登録
-  - ラボ21 アプリケーションの同意
 
-
+<!--
 ■ ラボ手順書
 
 英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
@@ -92,3 +88,4 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/ar
     - microsoft.directory/servicePrincipals/synchronizationCredentials/manage
 - ラボ20 アプリのアクセス管理（エンタープライズアプリケーション）
 - ラボ21 アプリケーションの同意
+-->
