--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -10,27 +10,30 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
 
 - モジュール1 エンタイトルメント管理を計画して実装する
   - [エンタイトルメント管理](../SC/entitlement.md)
-  - MS社員による記事:「AADエンタイトルメント管理とは？」
-    - https://qiita.com/zukakosan/items/bd03d294ac0b98faf064
-  - ラボ22 Azure AD エンタイトルメント管理
-  - ラボ24 Identity Governance（外部ユーザーのライフサイクルの管理）
+  - [ラボ22 Azure AD エンタイトルメント管理](lab22.md)
+  - [ラボ24 Identity Governance（外部ユーザーのライフサイクルの管理）](lab24.md)
 - モジュール2 アクセス レビューの計画、実装、管理
   - [Azure ADアクセスレビュー](../AZ-303/mod10-02-access-review.md)
-  - ラボ25 Azure AD アクセスレビュー
+  - [ラボ25 Azure AD アクセスレビュー](lab25.md)
 - モジュール3 特権アクセスを計画し、実装する
   - (PIMについてはラーニングパス2で解説済み)
+  - ([ラボ26 PIM](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_26_ConfigurePrivilegedIdentityManagementForAADRoles.md))
 - モジュール4 Azure Active Directory を監視および保守する
-  - [Azure ADサインインログ](../AZ-303/pdf/mod15/%E3%83%A1%E3%83%88%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%82%B0%E3%81%AE%E4%BE%8B.pdf)
+  - [PDF: ログとメトリック](../AZ-303/pdf/mod15/%E3%83%A1%E3%83%88%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%82%B0%E3%81%AE%E4%BE%8B.pdf)
   - [Log Analytics](../log-analytics/log-analytics.md)
   - [Microsoft Sentinel](../AZ-500/pdf/mod4/Microsoft%20Sentinel%20まとめ.pdf)
-  - ラボ27 Microsoft Sentinel (KQL)
+  - [ラボ27 Microsoft Sentinel (KQL)](lab27)
   - [Microsoft Defender for Cloud/servers/Endpoint](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%2C%20servers%2C%20Endpoint.pdf)
   - [Microsoft Defender for Cloud](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%20まとめv2.pdf)
-  - ラボ28 Microsoft Defender for Cloud (セキュアスコア)
+  - [ラボ28 Microsoft Defender for Cloud (セキュアスコア)](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_28_MonitorIdentitySecureScore.md)
 - おまけ（SC-300の範囲外）
   - [Microsoft Security Copilot](../microsoft-security-copilot/microsoft-security-copilot.md)
-  - [西日本リージョンの最新情報](../general/japanwest-region.md)
 
+<!--
+  - [西日本リージョンの最新情報](../general/japanwest-region.md)
+-->
+
+<!--
 ■ ラボ手順書
 
 英語版（最新。ブラウザの翻訳機能で日本語化して閲覧できます）
@@ -54,3 +57,4 @@ https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA
 https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator/archive/refs/heads/master.zip
 
 ダウンロードして展開すると Allfiles フォルダ以下にラボで使用するファイルがあります。
+-->
