--- a/SC-300/lp04.md
+++ b/SC-300/lp04.md
@@ -22,7 +22,7 @@ https://learn.microsoft.com/ja-jp/training/paths/plan-implement-identity-governa
   - [PDF: ログとメトリック](../AZ-303/pdf/mod15/%E3%83%A1%E3%83%88%E3%83%AA%E3%83%83%E3%82%AF%E3%81%A8%E3%83%AD%E3%82%B0%E3%81%AE%E4%BE%8B.pdf)
   - [Log Analytics](../log-analytics/log-analytics.md)
   - [Microsoft Sentinel](../AZ-500/pdf/mod4/Microsoft%20Sentinel%20まとめ.pdf)
-  - [ラボ27 Microsoft Sentinel (KQL)](lab27)
+  - [ラボ27 Microsoft Sentinel (KQL)](lab27.md)
   - [Microsoft Defender for Cloud/servers/Endpoint](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%2C%20servers%2C%20Endpoint.pdf)
   - [Microsoft Defender for Cloud](../AZ-500/pdf/mod4/Microsoft%20Defender%20for%20Cloud%20まとめv2.pdf)
   - [ラボ28 Microsoft Defender for Cloud (セキュアスコア)](https://github.com/MicrosoftLearning/SC-300-Identity-and-Access-Administrator.JA-JP/blob/main/Instructions/Labs/Lab_28_MonitorIdentitySecureScore.md)
