--- a/AZ-104-2023/lp02.md
+++ b/AZ-104-2023/lp02.md
@@ -2,18 +2,8 @@
 
 # ラーニングパス2 Azure 管理者向けの前提条件
 
-- サブスクリプションの管理
-  - サブスクリプションを構成する
-    - 管理グループ
-    - リソースグループ
-    - タグ
-    - ロック
-  - ロールベースのアクセス制御の構成
-  - Azure ポリシーを構成する
-  - [ラボ2a: サブスクリプションと RBAC を管理する](lab02a.md)
-  - [ラボ2b: Azure Policy を介してガバナンスを管理する](lab02b.md)
 - ツールを使用して Azure リソースを構成する
-  - Azureの管理ツール
+  - [Azureの管理ツール](pdf/Azure%E3%81%AE%E7%AE%A1%E7%90%86%E3%83%84%E3%83%BC%E3%83%AB.pdf)
     - Azure portal
     - Azure Cloud Shell
     - Azure PowerShell
@@ -24,3 +14,13 @@
   - [ラボ3b: ARM テンプレートを使用して Azure リソースを管理する](lab03b.md)
   - [ラボ3c: Azure PowerShell を使用して Azure リソースを管理する](lab03c.md)
   - [ラボ3d: Azure CLI を使用して Azure リソースを管理する](lab03d.md)
+- サブスクリプションの管理
+  - サブスクリプションを構成する
+    - 管理グループ
+    - リソースグループ
+    - タグ
+    - ロック
+  - ロールベースのアクセス制御の構成
+  - Azure ポリシーを構成する
+  - [ラボ2a: サブスクリプションと RBAC を管理する](lab02a.md)
+  - [ラボ2b: Azure Policy を介してガバナンスを管理する](lab02b.md)
