--- a/AZ-104-2023/lp02.md
+++ b/AZ-104-2023/lp02.md
@@ -3,7 +3,7 @@
 # ラーニングパス2 Azure 管理者向けの前提条件
 
 - ツールを使用して Azure リソースを構成する
-  - [Azureの管理ツール](pdf/Azure%E3%81%AE%E7%AE%A1%E7%90%86%E3%83%84%E3%83%BC%E3%83%AB.pdf)
+  - [PDF資料: Azureの管理ツール](pdf/Azure%E3%81%AE%E7%AE%A1%E7%90%86%E3%83%84%E3%83%BC%E3%83%AB.pdf)
     - Azure portal
     - Azure Cloud Shell
     - Azure PowerShell
@@ -15,12 +15,13 @@
   - [ラボ3c: Azure PowerShell を使用して Azure リソースを管理する](lab03c.md)
   - [ラボ3d: Azure CLI を使用して Azure リソースを管理する](lab03d.md)
 - サブスクリプションの管理
-  - サブスクリプションを構成する
+  - [PDF資料: Azureリソースの管理](pdf/Azure%E3%81%AE%E3%83%AA%E3%82%BD%E3%83%BC%E3%82%B9%E7%AE%A1%E7%90%86.pdf)
     - 管理グループ
+    - サブスクリプション
     - リソースグループ
     - タグ
     - ロック
-  - ロールベースのアクセス制御の構成
-  - Azure ポリシーを構成する
+    - ロールベースのアクセス制御(Azure RBAC)
+    - Azure ポリシー
   - [ラボ2a: サブスクリプションと RBAC を管理する](lab02a.md)
   - [ラボ2b: Azure Policy を介してガバナンスを管理する](lab02b.md)
