--- a/AZ-104-2023/lp03.md
+++ b/AZ-104-2023/lp03.md
@@ -3,8 +3,17 @@
 # ラーニングパス3
 
 - ストレージ アカウントの構成
-- Azure Blob Storage の構成
-- Azure Storage セキュリティを構成する
-- Azure Files と Azure File Sync を構成する
-- Azure Storage とツールを構成する
+  - [PDF資料: ストレージアカウント](pdf/%E3%82%B9%E3%83%88%E3%83%AC%E3%83%BC%E3%82%B8%E3%82%A2%E3%82%AB%E3%82%A6%E3%83%B3%E3%83%88.pdf)
+  - 講師デモ: Azure Blob Storage
+    - ストレージアカウントの作成
+    - Blobコンテナーの作成
+    - Blobのアップロードとダウンロード
+    - SAS
+    - 匿名アクセス
+  - 講師デモ: Azure Files
+    - ファイル共有の作成
+    - VMからのマウント
+  - [PDF資料: Blobのアクセス階層と料金](../AZ-104/pdf/Azure%20Blob%20Storage%E3%81%AE%E6%96%99%E9%87%91.pdf)
+  - [PDF資料: Azure File Sync](../AZ-104/pdf/mod07/Azure%20File%20Sync.pdf)
+  - [PDF資料: サービスエンドポイントとプライベートエンドポイント](../AZ-500/pdf/mod2/%E3%82%B5%E3%83%BC%E3%83%93%E3%82%B9%E3%82%A8%E3%83%B3%E3%83%89%E3%83%9D%E3%82%A4%E3%83%B3%E3%83%88%E3%81%A8%E3%83%97%E3%83%A9%E3%82%A4%E3%83%99%E3%83%BC%E3%83%88%E3%82%A8%E3%83%B3%E3%83%89%E3%83%9D%E3%82%A4%E3%83%B3%E3%83%88%E8%A8%AD%E5%AE%9A%E4%BE%8B.pdf)
 - [ラボ7: Azure Storage の管理](lab07.md)
